--- a/src/main/resources/static/partials/chat.html
+++ b/src/main/resources/static/partials/chat.html
@@ -11,7 +11,7 @@
 					<th class="ths">PERSONNES</th>
 				</tr>
 				<tr ng-repeat="user in users">
-					<td ng-click="changeUser(user.id)" class="results">{{user.prenom}}
+					<td ng-click="changeUser(user.id)" class="resultsper">{{user.prenom}}
 						{{user.nom}}</td>
 				</tr>
 			</table>
